# OpenGl-simple-triangle-manipulation

./: CMakeLists.txt
OpenGLProject/: CMakeLists.txt
OpenGLProject/src/: OpenGLProject.cpp  OpenGLProject.h
